RESOLVED FIXED164430
AX: [ATK] Wrong selected element at a given index in a list box (redux)
https://bugs.webkit.org/show_bug.cgi?id=164430
Summary AX: [ATK] Wrong selected element at a given index in a list box (redux)
Joanmarie Diggs
Reported 2016-11-04 13:47:08 PDT
Unfortunately I didn't notice bug 129039 or its associated "fix." However, the "bug" reported there is not a bug. 1. The AtkSelection documentation [1] states that atk_selection_ref_selection() takes "a gint specifying the index in the selection set. (e.g. the ith selection as opposed to the ith child)." 2. The method changed/broken even has a comment [2] which states "// i is the ith selection as opposed to the ith child." 3. There is different API, namely atk_object_ref_accessible_child(), when the ith child from the set of all children is sought. [3] It's not clear to me what prompted the filing of, and commmitted change for, bug 129039. But that change needs to be undone. [1] https://developer.gnome.org/atk/stable/AtkSelection.html#atk-selection-ref-selection [2] https://trac.webkit.org/browser/trunk/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceSelection.cpp?rev=164577#L99 [3] https://developer.gnome.org/atk/stable/AtkObject.html#atk-object-ref-accessible-child
Attachments
Patch (11.98 KB, patch)
2016-11-04 14:14 PDT, Joanmarie Diggs
no flags
Archive of layout-test-results from ews103 for mac-yosemite (911.67 KB, application/zip)
2016-11-04 15:13 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (847.82 KB, application/zip)
2016-11-04 15:16 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.78 MB, application/zip)
2016-11-04 15:22 PDT, Build Bot
no flags
Patch (12.91 KB, patch)
2016-11-05 02:45 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2016-11-04 13:47:32 PDT
Joanmarie Diggs
Comment 2 2016-11-04 14:14:24 PDT
Build Bot
Comment 3 2016-11-04 15:13:37 PDT
Comment on attachment 293926 [details] Patch Attachment 293926 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2463649 New failing tests: accessibility/select-element-at-index.html
Build Bot
Comment 4 2016-11-04 15:13:40 PDT
Created attachment 293940 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-11-04 15:16:29 PDT
Comment on attachment 293926 [details] Patch Attachment 293926 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2463657 New failing tests: accessibility/select-element-at-index.html
Build Bot
Comment 6 2016-11-04 15:16:32 PDT
Created attachment 293943 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-11-04 15:22:10 PDT
Comment on attachment 293926 [details] Patch Attachment 293926 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2463658 New failing tests: accessibility/select-element-at-index.html
Build Bot
Comment 8 2016-11-04 15:22:13 PDT
Created attachment 293944 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Joanmarie Diggs
Comment 9 2016-11-05 02:45:50 PDT
Joanmarie Diggs
Comment 10 2016-11-08 02:04:46 PST
Comment on attachment 293991 [details] Patch Chris, when you have a chance, would you please review this? Thanks in advance!
WebKit Commit Bot
Comment 11 2016-11-09 10:28:51 PST
Comment on attachment 293991 [details] Patch Clearing flags on attachment: 293991 Committed r208442: <http://trac.webkit.org/changeset/208442>
WebKit Commit Bot
Comment 12 2016-11-09 10:28:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.